# cascade_training

./: .gitignore  CMakeLists.txt  README.md  edit.cpp  recognize.cpp  recognize_lbp.cpp  sub_str.cpp  sub_str.h  train.cpp
